programming-language/workspace/compiler/tests/fixtures/invalid/syntax_missing_colon.cb64
# Syntax error: missing colon
def main()
    pass
